--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ message(STATUS ${TEST_EXE})
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-set(BOOST_DIR "/home/vsevolod/Programs/BOOST/boost_1_61_0/boost")
+#set(BOOST_DIR "/home/vsevolod/Programs/BOOST/boost_1_61_0/boost")
 #set(Boost_NO_SYSTEM_PATHS ON)
 #find_package(Boost COMPONENTS geometry REQUIRED)
 #find_package(Threads REQUIRED)
