--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories(GridLib)
 set(SRC main.cpp)
 
 add_executable(${TEST_EXE} ${SRC} )		  
-add_subdirectory(GridLib)
+add_subdirectory("GridLib/")
 
-target_link_libraries(${TEST_EXE} GridLib)
+target_link_libraries(${TEST_EXE} FINELEM)
 
