--- a/src/GridLib/CMakeLists.txt
+++ b/src/GridLib/CMakeLists.txt
@@ -1,3 +1,6 @@
-set(FIN_ELEMS_LIB LinElem.cpp)
+set(FIN_ELEMS_LIB 	Builder.cpp
+				 	LinElem.cpp
+				  	RectElem.cpp
+					CubeElem.cpp)
 
 add_library(FINELEM STATIC ${FIN_ELEMS_LIB})
