--- a/src/CompressedMatrix/CMakeLists.txt
+++ b/src/CompressedMatrix/CMakeLists.txt
@@ -1,3 +1,4 @@
-set(COMPRESSED_MAT CompressedM.cpp)
+set(SRC CompressedM.cpp)
+set(HEADERS CompressedM.h)
 
-add_library(COMPRESSEDMAT_LIB STATIC ${COMPRESSED_MAT})
+add_library(COMPRESSEDMAT_LIB STATIC ${SRC} ${HEADERS})
