--- a/src/PDE/CMakeLists.txt
+++ b/src/PDE/CMakeLists.txt
@@ -1,3 +1,4 @@
-set(PDE FEM_PDE.cpp)
+set(SRC FemPDE.cpp)
+set(HEADERS FemPDE.h)
 
-add_library(PDE_LIB STATIC ${PDE})
+add_library(PDE_LIB STATIC ${SRC} ${HEADERS})
