Complete version for debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ message(STATUS ${TEST_EXE})
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+include_directories("${PROJECT_SOURCE_DIR}/src/")
+
 add_subdirectory("src/")
