--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,5 @@
 set(SRC main.cpp)
 
-add_executable(${TEST_EXE} ${SRC})		  
-add_subdirectory("GridLib/")
-add_subdirectory("PDE/")
-add_subdirectory("Math/")
-add_subdirectory("Solvers/")
-add_subdirectory("CompressedMatrix/")
+add_executable(${TEST_EXE} ${SRC})
 
-
-target_link_libraries(${TEST_EXE} FINELEM
-	VECT_LIB
-	COMPRESSEDMAT_LIB
-	PDE_LIB
-	VECT_LIB
-	SOLVERS_LIB)
-
+target_link_libraries(${TEST_EXE} PRIVATE FEM_lib HEADERS)
