--- a/src/pde_lib/CMakeLists.txt
+++ b/src/pde_lib/CMakeLists.txt
@@ -1,12 +1,15 @@
-Builder.cpp
+set(LIB_CPPS Builder.cpp
 	CompressedM.cpp
-	CubeElem.cpp
+	#CubeElem.cpp
 	FemGrid.cpp
 	FemPDE.cpp
 	IBoundaryElem.cpp
 	LinElem.cpp
 	Preconditioners.cpp
-	RectElem.cpp
+	#RectElem.cpp
 	Solvers.cpp
 	VecMath.cpp
 	VectorOperations.cpp
+)
+
+add_library(FEM_lib STATIC ${LIB_CPPS})
