Stable version for 1D problem solve

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(SRC main.cpp)
 
+add_subdirectory(lib)
+
 add_executable(${TEST_EXE} ${SRC})
 
-target_link_libraries(${TEST_EXE} PRIVATE FEM_lib HEADERS)
+target_link_libraries(${TEST_EXE} PRIVATE FEM_PDE_lib)
