--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(lib)
 
 add_executable(${TEST_EXE} ${SRC})
 
-target_link_libraries(${TEST_EXE} PRIVATE FEM_PDE_lib)
+target_link_libraries(${TEST_EXE} PRIVATE ${FEM_PDE_lib})
