--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -3,6 +3,7 @@ set(LIB_CPPS pde_lib/Builder.cpp
 	pde_lib/FemGrid.cpp
 	pde_lib/FemPDE.cpp
 	pde_lib/IFiniteElem.cpp
+	pde_lib/IBoundaryElem.cpp
 	pde_lib/LinElem.cpp
 	pde_lib/PointBoundElem.cpp
 	pde_lib/SolverParams.cpp
@@ -11,21 +12,6 @@ set(LIB_CPPS pde_lib/Builder.cpp
 	pde_lib/VectorOperations.cpp
 )
 
-set(HEADERS headers/Builder.h
-	headers/CompressedM.h
-	headers/FemGrid.h
-	headers/FemPDE.h
-	headers/IBoundaryElem.h
-	headers/IFiniteElem.h
-	headers/LinElem.h
-	headers/PointBoundElem.h
-	headers/Preconditioners.h
-	headers/Solvers.h
-	headers/SolverParams.h
-	headers/VectorOperations.h
-)
 
-add_library(${FEM_PDE_lib} STATIC ${LIB_CPPS} ${HEADERS})
-# target_include_directories(${FEMLIB} PRIVATE "${PROJECT_SOURCE_DIR}/lib/pde_lib"
-# 	"${PROJECT_SOURCE_DIR}/lib/headers") 
- 
+add_library(${FEM_PDE_lib} STATIC ${LIB_CPPS})
+target_include_directories(${FEM_PDE_lib} PRIVATE headers)
