Added Catch2 tests for 1D solution

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -12,6 +12,22 @@ set(LIB_CPPS pde_lib/Builder.cpp
 	pde_lib/VectorOperations.cpp
 )
 
+set(HEADERS include/Builder.h
+	include/CompressedM.h
+	include/FemGrid.h
+	include/FemPDE.h
+	include/IFiniteElem.h
+	include/IBoundaryElem.h
+	include/LinElem.h
+	include/PointBoundElem.h
+	include/SolverParams.h
+	include/Preconditioners.h
+	include/Solvers.h
+	include/VectorOperations.h
+)
 
-add_library(${FEM_PDE_lib} STATIC ${LIB_CPPS})
-target_include_directories(${FEM_PDE_lib} PRIVATE headers)
+
+add_library(${FEM_PDE_lib} STATIC ${LIB_CPPS} ${HEADERS})
+target_include_directories(${FEM_PDE_lib} PRIVATE include)
+
+add_subdirectory(tests)
