--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 build
 .vscode
-src/main
-src/Test_solution.vtk
-src/lib/headers/TriangleElem.h
+CMakeLists.txt
+Wolfram
+src/tests
 src/lib/pde_lib/TriangleElem.cpp
+src/lib/include/TriangleElem.h
