Added local and global matrices tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SRC main.cpp)
 
 add_executable(${TEST_EXE} ${SRC})
+target_include_directories(${TEST_EXE} PRIVATE lib/include)
 
 add_subdirectory(lib)
 
