--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,9 @@
 cmake_minimum_required(VERSION 3.0.0)
+
 project(FEM VERSION 0.1.0)
 
-set(TEST_EXE fem)
-set(FEM_PDE_lib FEM_PDE)
-
-message(STATUS ${TEST_EXE})
-
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-include_directories("${PROJECT_SOURCE_DIR}/src/")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory("src/")
