--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,3 @@
-set(SRC main.cpp)
-
-add_executable(${TEST_EXE} ${SRC})
-target_include_directories(${TEST_EXE} PRIVATE lib/include)
+# include_directories(lib)
 
 add_subdirectory(lib)
-
-target_link_libraries(${TEST_EXE} PRIVATE ${FEM_PDE_lib})
