--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,17 @@
-# include_directories(lib)
+Include(FetchContent)
+FetchContent_Declare(
+  catch
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v2.11.0
+)
+FetchContent_GetProperties(catch)
+if(NOT catch_POPULATED)
+  FetchContent_Populate(catch)
+  add_subdirectory(${catch_SOURCE_DIR} ${catch_BINARY_DIR})
+endif()
+
+set(CATCH2_FRAMEWORK "Catch2::Catch2")
+
+# FetchContent_MakeAvailable(Catch2)
 
 add_subdirectory(lib)
